appId: dev.ipf.whitenoise.android.maestrolab
---
- runFlow: ../fixtures/runtime-ready.yaml
- assertVisible: Maestro group
- runFlow: ../fixtures/open-settings.yaml
- assertVisible: Settings
- tapOn: Profile
- assertVisible:
    id: profile.edit
- tapOn:
    id: profile.edit
